--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="container mx-auto px-6 py-12">
+<article class="container mx-auto px-6 py-12 max-w-3xl">
     <header class="mb-8">
         <h1 class="text-4xl font-bold mb-4">{{ page.title }}</h1>
         <div class="text-gray-400">
@@ -19,5 +19,9 @@ layout: default
 
     <div class="prose prose-lg prose-invert max-w-none">
         {{ content }}
+    </div>
+
+    <div class="mt-12 pt-8 border-t border-gray-800">
+        <a href="/blog" class="text-indigo-400 hover:text-indigo-300 transition duration-300">&larr; Back to Blog</a>
     </div>
 </article>
