--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
             <a href="/" class="text-2xl font-bold text-white">{{ site.title }}</a>
             <nav class="flex space-x-8">
                 <a href="/#about" class="text-gray-300 hover:text-white transition duration-300">About</a>
-                <a href="/#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a>
+                <!-- <a href="/#projects" class="text-gray-300 hover:text-white transition duration-300">Projects</a> -->
                 <a href="/blog" class="text-gray-300 hover:text-white transition duration-300">Blog</a>
-                <a href="/#publications" class="text-gray-300 hover:text-white transition duration-300">Publications</a>
+                <!-- <a href="/#publications" class="text-gray-300 hover:text-white transition duration-300">Publications</a> -->
                 <a href="/#contact" class="text-gray-300 hover:text-white transition duration-300">Contact</a>
             </nav>
             <div class="flex items-center space-x-4">
@@ -39,9 +39,9 @@
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden">
             <a href="/#about" class="block py-2 px-4 text-sm hover:bg-gray-700">About</a>
-            <a href="/#projects" class="block py-2 px-4 text-sm hover:bg-gray-700">Projects</a>
+            <!-- <a href="/#projects" class="block py-2 px-4 text-sm hover:bg-gray-700">Projects</a> -->
             <a href="/blog" class="block py-2 px-4 text-sm hover:bg-gray-700">Blog</a>
-            <a href="/#publications" class="block py-2 px-4 text-sm hover:bg-gray-700">Publications</a>
+            <!-- <a href="/#publications" class="block py-2 px-4 text-sm hover:bg-gray-700">Publications</a> -->
             <a href="/#contact" class="block py-2 px-4 text-sm hover:bg-gray-700">Contact</a>
         </div>
     </header>
